--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,3 +22,7 @@ tauri = { version = "2", features = ["unstable"] }
 tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+tauri-plugin-log = "2.7.1"
+tauri-plugin-os = "2.3.2"
+thiserror = "2.0.17"
+log = "0.4.29"
