Add better cross platform handling for e2e tests

--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
-    "test:e2e": "wdio run wdio.conf.js",
+    "test:e2e": "node scripts/run-e2e-sequential.cjs",
+    "test:e2e:lifecycle": "wdio run wdio.lifecycle.conf.js",
+    "test:e2e:all": "npm run test:e2e && npm run test:e2e:lifecycle",
     "docs": "typedoc --out docs src"
   },
   "dependencies": {
