--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ lerna-debug.log*
 
 node_modules
 dist
+dist-electron
 dist-ssr
 *.local
 
@@ -24,4 +25,5 @@ dist-ssr
 *.sw?
 
 coverage/
+coverage-electron/
 docs/
