Update automated tests to run for every branch

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ name: CI
 # =============================================================================
 on:
   push:
-    branches: [main]
+    # Run on all branches
   pull_request:
     branches: [main]
   # Allow manual triggering from Actions tab
